Fixed team contact container style hide behind the footer

--- a/src/pages/Contact/index.module.scss
+++ b/src/pages/Contact/index.module.scss
@@ -113,7 +113,7 @@
     &.team {
       max-width: 1400px;
       width: 90%;
-      // flex-basis: 90%;
+      margin-bottom: 8em;
 
       &::before {
         content: "";
